Apache Tez Change Log
=====================

Release 0.7.2 Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3293. Fetch failures can cause a shuffle hang waiting for memory merge that never starts.
  TEZ-3305. TestAnalyzer fails on Hadoop 2.7.
  TEZ-3304. TestHistoryParser fails with Hadoop 2.7.
  TEZ-3296. Tez job can hang if two vertices at the same root distance have different task requirements
  TEZ-3294. DAG.createDag() does not clear local state on repeat calls.
  TEZ-3297. Deadlock scenario in AM during ShuffleVertexManager auto reduce.
  TEZ-3296. Tez fails to compile against hadoop 2.8 after MAPREDUCE-5870
  TEZ-3278. Hide Swimlane from Tez UI
  TEZ-909.  Provide support for application tags 
  TEZ-2769. TEZ-UI Hive SQL is only displayed to line 11
  TEZ-3280. LOG MRInputHelpers split generation message as INFO
  TEZ-3257. Fix flaky test TestUnorderedPartitionedKVWriter.
  TEZ-3240. Improvements to tez.lib.uris to allow for multiple tarballs and mixing tarballs and jars.
  TEZ-3237. Corrupted shuffle transfers to disk are not detected during transfer
  TEZ-3258. Jvm Checker does not ignore DisableExplicitGC when checking JVM GC options.
  TEZ-3256. [Backport HADOOP-11032] Remove Guava Stopwatch dependency
  TEZ-2342. Reduce bytearray copy with TezEvent Serialization and deserialization
  TEZ-3243. Output vertices are hidden for UI graph view

Release 0.7.1: 2016-05-10

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2972. Avoid task rescheduling when a node turns unhealthy

ALL CHANGES:
  TEZ-3241. Exclude LICENSE files from rat check.
  TEZ-3193. Deadlock in AM during task commit request. 
  TEZ-3203. DAG hangs when one of the upstream vertices has zero tasks
  TEZ-3213. Uncaught exception during vertex recovery leads to invalid state transition loop.
  TEZ-3224. User payload is not initialized before creating vertex manager plugin. 